--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <!--Import materialize.css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-    <title>React App</title>
+    <title>GameWeb</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
